<resources>
    <string name="app_name">CRYONUM</string>
    <string name="app_version">Версия приложения: %1$s</string>
    <string name="about_app">О приложении</string>
    <string name="history_empty_message">Пока что пусто, но добавьте первые вычисления, и они появятся здесь!</string>
    <string name="action_menu">Меню</string>
    <string name="photo_camera">Сфотографировать</string>
    <string name="recognize_image">Распознать с изображения</string>
    <string name="history">История</string>
    <string name="back">Назад</string>
    <string name="back2">Удалить</string>
    <string name="language">Язык</string>
    <string name="settings">Настройки</string>
    <string name="help_center">Справочный центр</string>
    <string name="policy">ПОЛИТИКА КОНФИДЕНЦИАЛЬНОСТИ</string>
    <string name="source_code">ИСХОДНЫЙ КОД</string>
    <string name="dark_themes">Темная тема</string>
    <string name="image">Изображение</string>
    <string name="language_app">Язык интерфейса</string>
    <string name="Russian_language">Русский</string>
    <string name="French_language">Французский</string>
    <string name="Confirm">Продолжить</string>
    <string name="Clean">C</string>
    <string name="EnterPrimer">Подстановки</string>
    <string name="First_string">Первая строка:</string>
    <string name="SecondString">Вторая строка:</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="string_one"> Введите значения</string>
    <string name="BackBack">Вернуться назад</string>
    <string name="inversions"> %1$d</string>
    <string name="even">четная</string>
    <string name="odd">нечетная</string>
    <string name="history_parity"> %1$s</string>
    <plurals name="inversion">
        <item quantity="one">%d инверсия</item>
        <item quantity="few">%d инверсии</item>
        <item quantity="many">%d инверсий</item>
    </plurals>
    <string name="history_top_row">%1$s</string>
    <string name="history_bottom_row">%1$s</string>
    <string name="delete_item_title">Удалить элемент?</string>
    <string name="delete_item_message">Вы уверены, что хотите удалить этот элемент из истории?</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="enter_first_string">Введите первую строку.</string>
    <string name="enter_second_string">Введите второю строку.</string>
    <string name="same_length_error">Строки должны быть одинаковой длины</string>
    <string name="error_enter">Ошибка: убедитесь, что введены только цифры</string>
    <string name="error_photo_camera">Не удалось распознать две строки. Попробуйте другое изображение.</string>
    <string name="error_photo_galery">Ошибка при распознавании текста</string>
    <string name="choose_language">Выберите язык</string>
    <string name="ok">ОК</string>
    <string name="no_camera_app">Приложение Камера не найдена.</string>
    <string name="error_zero">Первая строка не может начинаться с 0.</string>
    <string name="input_order_error">Нарушен порядок ввода</string>
    <string name="lecture">Лекция</string>
    <string name="error_download_app">Нет приложения для скачивания файла.</string>
    <string name="Maximum_number">Максимальное значение</string>
    <string name="enter_the_string_manually">Ввод вручную</string>
    <string name="enter_maximum">Максимальное значение</string>
    <string name="enter_quistion">Как ввести первую строку?</string>
    <string name="enter_the_string_manually_2">Ввести вручную</string>
    <string name="enter_maximum_2">Ввести максимальное значение</string>
    <string name="The_first_line_is_filled">Первая строка заполнена</string>
    <string name="Please_enter_a_valid_number">Введите корректное число</string>
    <string name="Copyright">Авторские права</string>
    <string name="Copyright_text">В этом приложении используются матереалы лекций по курсу Алгебра и теория чисел Северного (Арктического) Федерального Университета им. М.В.Ломоносова.</string>
    <string name="all_rights_reserved">Все права защищены</string>
    <string name="narfu_logo">Логотип вуза</string>
    <string name="copyright_icon">Значок авторских прав</string>
    <string name="reference_material"> Справочный материал</string>
    <string name="go_to_lecture">Перейти к лекции</string>
    <string name="Algebra_and_teoria_chisel">Алгебра и теория чисел</string>
    <string name="Themes">Темы</string>
    <string name="SandyBrown">SandyBrown</string>
    <string name="DarkAMOLED">AMOLED</string>
    <string name="ClassicWhite">Светлая</string>
    <string name="ThemeSelection">Выбор темы</string>
    <string name="telegram_channel_developer">Telegram-канал</string>
    <string name="history_saved_at">Сохранено: %1$s</string>
    <string name="arrow">Иконка стрелки</string>
    <string name="desc_theme_classic_light">Выбрать светлую тему</string>
    <string name="desc_theme_classic_dark">Выбрать тёмную тему</string>
    <string name="desc_theme_amoled">Выбрать AMOLED-тему</string>
    <string name="desc_theme_sandybrown">Выбрать тему Sandy Brown</string>
    <string name="open_telegram_channel">Открыть канал Telegram</string>
    <string name="telegram_link_unavailable">Не удалось получить актуальную ссылку Telegram</string>
    <string name="contact_icon_description">Иконка социальной сети</string>
    <string name="permission_explanation">Для работы камеры и галереи требуется разрешение. Разрешите доступ в настройках.</string>
    <string name="left_icon">Левая иконка карточки</string>
    <string name="right_icon">Правая иконка карточки</string>
    <string name="default_card_title">Название карточки</string>
    <string name="error_file_open">Ошибка при открытии файла</string>
    <string name="policy_first_launch_title">Добро пожаловать!</string>
    <string name="policy_first_launch_message">Для использования приложения необходимо ознакомиться с политикой конфиденциальности.</string>
    <string name="policy_read_button">Ознакомиться</string>
    <string name="policy_update_title">Обновление политики конфиденциальности</string>
    <string name="policy_update_message">Политика конфиденциальности была обновлена. Пожалуйста, ознакомьтесь с новой версией и подтвердите согласие для продолжения работы с приложением.</string>
    <string name="accept">Принять</string>
    <string name="decline">Отклонить</string>
    <string name="access_denied_title">Доступ будет ограничен!</string>
    <string name="close_app">Закрыть приложение</string>
    <string name="skip_policy">Пропустить</string>
    <string name="permission_notification_denied">Разрешение на уведомления не предоставлено</string>
    <string name="policy_update_title2">Политика конфиденциальности обновлена</string>
    <string name="policy_update_text">Политика конфиденциальности изменилась. Нажмите, чтобы продолжить.</string>
    <string name="policy_update_notification_text">Доступна версия %1$s. Нажмите, чтобы скачать и прочитать её.</string>
    <string name="policy_channel_name">Обновления политики</string>
    <string name="error_rendering_pdf">Ошибка при отображении PDF документа.</string>
    <string name="view_policy_options_at_end">Ознакомиться с Условиями</string>
    <string name="policy_channel_description">Уведомления об изменениях в политике конфиденциальности.</string>
    <string name="access_denied_message">Для использования приложения необходимо принять политику конфиденциальности.</string>
    <string name="schedule">График</string>
    <string name="Gallery">Галерея</string>
    <string name="language_selection_title">Выбор языка</string>
    <string name="status_selected">Выбрано</string>
    <string name="analytics">Аналитика</string>
    <string name="security">Безопасность</string>
    <string name="accessibility">Спец. возможности</string>
    <string name="plas">+</string>
    <string name="minus">-</string>
    <string name="module">| |</string>
    <string name="symbol_multiplication">×</string>
    <string name="symbol_division">÷</string>
    <string name="symbol_percent">%</string>
    <string name="symbol_open_bracket">(</string>
    <string name="symbol_close_bracket">)</string>
    <string name="symbol_equals">=</string>
    <string name="expand">Развернуть</string>
    <string name="symbol_power2">x²</string>
    <string name="symbol_comma">,</string>
    <string name="symbol_pi">π</string>
    <string name="symbol_e">e</string>
    <string name="symbol_factorial">!</string>
    <string name="btn_inv">inv</string>
    <string name="symbol_ln">ln</string>
    <string name="symbol_log">log</string>
    <string name="symbol_sin">sin</string>
    <string name="symbol_cos">cos</string>
    <string name="symbol_tan">tg</string>
    <string name="symbol_cot">ctg</string>
    <string name="symbol_root_n">ⁿ√</string>
    <string name="btn_deg">deg</string>
    <string name="btn_rad">rad</string>
    <string name="memory_clear">MC</string>
    <string name="memory_add">M+</string>
    <string name="memory_subtract">M-</string>
    <string name="memory_recall">MR</string>
    <string name="input_display_description">Описание отображения ввода</string>
    <string name="input_display_label">Поле ввода выражения</string>
    <string name="analytics_info">Переключатель управляет отправкой пользовательской аналитики. Локальная диагностика сохраняется независимо от него. Отчёты о сбоях отправляются через Firebase Crashlytics независимо от переключателя.</string>
    <string name="analytics_collection"> Сбор аналитики </string>
    <string name="to_home">Главная</string>
    <string name="calculator_title">Калькулятор</string>
    <string name="file_not_found">Файл не найден</string>
    <string name="search_lectures_hint">Поиск лекций&#8230;</string>
    <string name="vertical_ellipsis">⋮</string>
    <string name="open_privacy_policy">Открыть политику конфиденциальности</string>
    <string name="error_opening_policy">Ошибка при открытии политики конфиденциальности</string>
    <string name="no_browser_installed">Нет приложения для открытия ссылки</string>
    <string name="error_opening_link">Ошибка при попытке открыть ссылку</string>
    <string name="algebra_and_number_theory">Алгебра и теория чисел</string>
    <plurals name="selected_count_plurals">
        <item quantity="one">Выбрано: %d элемент</item>
        <item quantity="few">Выбрано: %d элемента</item>
        <item quantity="many">Выбрано: %d элементов</item>
        <item quantity="other">Выбрано: %d</item>
    </plurals>
    <plurals name="delete_selected_message_plurals">
        <item quantity="one">Вы уверены, что хотите удалить %d элемент?</item>
        <item quantity="few">Вы уверены, что хотите удалить %d элемента?</item>
        <item quantity="many">Вы уверены, что хотите удалить %d элементов?</item>
        <item quantity="other">Вы уверены, что хотите удалить %d?</item>
    </plurals>
    <string name="delete_selected_title">Удалить выбранные?</string>
    <string name="select_all">Все</string>
    <string name="algebraic_structures">Основные алгебраические структуры</string>
    <string name="divisibility_in_integers">Делимость в кольце целых чисел нацело и с остатком</string>
    <string name="gcd_lcm">НОД и НОК целых чисел. Взаимно простые числа</string>
    <string name="prime_numbers">Простые числа</string>
    <string name="numeric_comparisons">Числовые сравнения</string>
    <string name="solving_comparisons">Решение сравнений</string>
    <string name="complex_numbers_1">Комплексные числа. Часть 1</string>
    <string name="complex_numbers_2">Комплексные числа. Часть 2</string>
    <string name="slu_gauss">СЛУ. Метод Гаусса</string>
</resources>