<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_language"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_help"
            android:title="@string/help_center" />
        <item
            android:id="@+id/fragment_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>
</menu>